--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "bulma": "^0.8.1",
         "cropperjs": "^1.5.6",
+        "date-fns": "^2.11.1",
         "exifreader": "^3.5.0",
         "leaflet": "^1.6.0",
         "minireset.css": "0.0.6",
